Seems we can't use NDA for ressources,bad jekyll

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: home
 
 <div class="container">
 
-  <h1>Bootstrap</h1>
+  <h1>Work in progress</h1>
   <p>Hello world! This is the first page :P</p>
   
 </div><!-- /container -->
