Fist page building

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@ title: "Blog du voyage de Julie et Pierre-Yves"
 layout: home
 ---
 
-<div class="container">
-
-  <h1>Work in progress</h1>
-  <p>Hello world! This is the first page :P</p>
-  
-</div><!-- /container -->
+<div class="jumbotron">
+  <div class="container">
+    <h1 class="page-heading">Le voyage de Julie et Pierre-Yves</h2>
+    <p>Hey, ça c'est un nom comme on n'en fait plus !.</p>
+    <a href="#" class="btn btn-large">Voyager</a>
+    <a href="#" class="btn btn-large btn-outline">Pourquoi</a>
+  </div>
+</div>
