test some javascript

--- a/index.html
+++ b/index.html
@@ -3,11 +3,45 @@ title: "Blog du voyage de Julie et Pierre-Yves"
 layout: home
 ---
 
-<div class="jumbotron">
-  <div class="container">
-    <h1 class="page-heading">Le voyage de Julie et Pierre-Yves</h2>
-    <p>Hey, ça c'est un nom comme on n'en fait plus !.</p>
-    <a href="#" class="btn btn-large">Voyager</a>
-    <a href="#" class="btn btn-large btn-outline">Pourquoi</a>
+<div id="carousel-example" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example" data-slide-to="1"></li>
+    <li data-target="#carousel-example" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="../assets/img/moma-1.jpg" alt="">
+      <div class="carousel-caption">
+        <h1>Le voyage de Julie et Pierre-Yves</h1>
+        <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
+        <a href="#" class="btn btn-large">Sign up today</a>
+        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+      </div>
+    </div>
+    <div class="item">
+      <img src="../assets/img/moma-2.jpg" alt="">
+      <div class="carousel-caption">
+        <h1>Toujours plus loin</h1>
+        <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+        <a href="#" class="btn btn-large">Sign up today</a>
+        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+      </div>
+    </div>
+    <div class="item">
+      <img src="../assets/img/moma-3.jpg" alt="">
+      <div class="carousel-caption">
+        <h1>Toujours plus haut ^^</h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <a href="#" class="btn btn-large">Sign up today</a>
+        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+      </div>
+    </div>
   </div>
+  <a class="left carousel-control" href="#carousel-example" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+  </a>
 </div>
