--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: home
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="../assets/img/moma-1.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       <div class="carousel-caption">
         <h1>Le voyage de Julie et Pierre-Yves</h1>
         <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
@@ -20,7 +20,7 @@ layout: home
       </div>
     </div>
     <div class="item">
-      <img src="../assets/img/moma-2.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-2.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus loin</h1>
         <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -29,7 +29,7 @@ layout: home
       </div>
     </div>
     <div class="item">
-      <img src="../assets/img/moma-3.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-3.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus haut ^^</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
