Change for active navbar

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 title: "Blog du voyage de Julie et Pierre-Yves"
 layout: home
+slug: home
 ---
 
 <div id="carousel-example" class="carousel slide">
