--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ slug: home
       <div class="carousel-caption">
         <h1>Le voyage de Julie et Pierre-Yves</h1>
         <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-        <a href="#" class="btn btn-large">Sign up today</a>
-        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+        <a href="#" class="btn btn-large">WOOoo</a>
+        <a href="#" class="btn btn-large btn-outline">J'en veux plus</a>
       </div>
     </div>
     <div class="item">
@@ -25,8 +25,8 @@ slug: home
       <div class="carousel-caption">
         <h1>Toujours plus loin</h1>
         <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <a href="#" class="btn btn-large">Sign up today</a>
-        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+        <a href="#" class="btn btn-large">WOOoo</a>
+        <a href="#" class="btn btn-large btn-outline">J'en veux plus</a>
       </div>
     </div>
     <div class="item">
@@ -34,8 +34,8 @@ slug: home
       <div class="carousel-caption">
         <h1>Toujours plus haut ^^</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-        <a href="#" class="btn btn-large">Sign up today</a>
-        <a href="#" class="btn btn-large btn-outline">Learn more</a>
+        <a href="#" class="btn btn-large">WOOoo</a>
+        <a href="#" class="btn btn-large btn-outline">J'en veux plus</a>
       </div>
     </div>
   </div>
