--- a/index.html
+++ b/index.html
@@ -46,3 +46,24 @@ slug: home
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+
+<div class="navbar" data-spy="affix" data-offset-top="600">
+  <div class="container">
+    <a href="{{ site.url }}/" class="navbar-brand">YOOOO</a>
+    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <div class="nav-collapse collapse">
+      <ul class="nav navbar-nav">
+        <li{% if page.slug == "home" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/index.html">Page 1</a>
+        </li>
+        <li{% if page.slug == "page2" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/page2.html">Page 2</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
