--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ slug: home
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "home" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/index.html">Page 1</a>
+          <a href="{{ site.url }}/index.html">Home</a>
         </li>
-        <li{% if page.slug == "page2" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page2.html">Page 2</a>
+        <li{% if page.slug == "page1" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/page1.html">Page 1</a>
         </li>
       </ul>
     </div>
