--- a/page1.html
+++ b/page1.html
@@ -6,7 +6,7 @@ slug: page1
 
 <!-- Albums
 ================================================== -->
-<section id="thumbnails">
+<section>
   <div class="page-header">
     <h1>Albums</h1>
   </div>
@@ -14,28 +14,26 @@ slug: page1
 
   <h3>Albums du Pérou</h3>
   <p>La petite descr</p>
-  <div class="bs-example">
-    <div class="row">
-      <div class="col col-lg-3">
-        <a href="#" class="thumbnail">
-          <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
-        </a>
-      </div>
-      <div class="col col-lg-3">
-        <a href="#" class="thumbnail">
-          <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
-        </a>
-      </div>
-      <div class="col col-lg-3">
-        <a href="#" class="thumbnail">
-          <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
-        </a>
-      </div>
-      <div class="col col-lg-3">
-        <a href="#" class="thumbnail">
-          <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
-        </a>
-      </div>
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
     </div>
   </div><!-- /.bs-example -->
 </section>
