--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ slug: home
     <h2>Premier Pays</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -85,7 +85,7 @@ slug: home
     <h2>Le deuxieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -96,7 +96,7 @@ slug: home
     <h2>Le troisieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -107,7 +107,7 @@ slug: home
     <h2>le quatrieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
