--- a/page1.html
+++ b/page1.html
@@ -17,22 +17,22 @@ slug: page1
   <div class="row">
     <div class="col col-lg-3">
       <a href="#" class="thumbnail">
-        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       </a>
     </div>
     <div class="col col-lg-3">
       <a href="#" class="thumbnail">
-        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       </a>
     </div>
     <div class="col col-lg-3">
       <a href="#" class="thumbnail">
-        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       </a>
     </div>
     <div class="col col-lg-3">
       <a href="#" class="thumbnail">
-        <img data-src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       </a>
     </div>
   </div><!-- /.bs-example -->
