--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@ slug: page1
   <div class="page-header">
     <h1>Albums</h1>
   </div>
-  <p class="lead">Lise tes albums</p>
+  <p class="lead">Liste des albums</p>
 
   <h3>Albums du Pérou</h3>
   <p>La petite descr</p>
@@ -35,5 +35,5 @@ slug: page1
         <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
       </a>
     </div>
-  </div><!-- /.bs-example -->
+  </div>
 </section>
