Update pagename on nav

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ slug: home
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
         <li{% if page.slug == "page1" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1.html">Page 1</a>
+          <a href="{{ site.url }}/page1">Page 1</a>
         </li>
       </ul>
     </div>
