--- a/page1.html
+++ b/page1.html
@@ -9,10 +9,35 @@ slug: page1
 <section>
   <div class="page-header">
     <h1>Albums</h1>
+    <p class="lead">Liste des albums</p>
   </div>
-  <p class="lead">Liste des albums</p>
 
   <h3>Albums du Pérou</h3>
+  <p>La petite descr</p>
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+  </div>
+  
+  <h3>Albums de alaska</h3>
   <p>La petite descr</p>
   <div class="row">
     <div class="col col-lg-3">
