--- a/page1.html
+++ b/page1.html
@@ -4,6 +4,8 @@ layout: default
 slug: page1
 ---
 
+<div class="container">
+
 <!-- Albums
 ================================================== -->
 <section>
@@ -62,3 +64,5 @@ slug: page1
     </div>
   </div>
 </section>
+
+</div>
