--- a/page1.html
+++ b/page1.html
@@ -63,6 +63,81 @@ slug: page1
       </a>
     </div>
   </div>
+  
+  <h3>Albums de alaska</h3>
+  <p>La petite descr</p>
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+  </div>
+  
+  <h3>Albums de alaska</h3>
+  <p>La petite descr</p>
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+  </div>
+  
+  <h3>Albums de alaska</h3>
+  <p>La petite descr</p>
+  <div class="row">
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+    <div class="col col-lg-3">
+      <a href="#" class="thumbnail">
+        <img src="{{ site.url }}/assets/img/moma-1.jpg" alt="">
+      </a>
+    </div>
+  </div>
 </section>
 
 </div>
