--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ slug: home
         <li{% if page.slug == "home" %} class="active"{% endif %}>
           <a href="{{ site.url }}/index.html">Home</a>
         </li>
-        <li{% if page.slug == "page1" %} class="active"{% endif %}>
-          <a href="{{ site.url }}/page1">Page 1</a>
+        <li{% if page.slug == "articles" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/articles">Articles</a>
         </li>
       </ul>
     </div>
