--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-title: "Blog du voyage de Julie et Pierre-Yves"
+title:  Blog du voyage de Julie et Pierre-Yves
 layout: home
-slug: home
+slug:   home
 ---
 
 <div id="carousel-example" class="carousel slide">
