--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ slug:   home
         <li{% if page.slug == "articles" %} class="active"{% endif %}>
           <a href="{{ site.url }}/articles">Articles</a>
         </li>
+        <li{% if page.slug == "galerie" %} class="active"{% endif %}>
+          <a href="{{ site.url }}/galerie">Galerie</a>
+        </li>
       </ul>
     </div>
   </div>
