--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ slug:   home
   </a>
 </div>
 
+{% include nav-main.html %}
+
 <div class="featurette">
   <div class="container">
     <h1 class="step-num">1</h1>
