--- a/articles.html
+++ b/articles.html
@@ -3,7 +3,7 @@ title:  Voyagez avec nous !
 layout: sidebar
 slug:   articles
 ---
-      {% for post in paginator.posts %}
+      {% for post in site.posts %}
       <!-- articles
       ================================================== -->
       <section>
