--- a/articles.html
+++ b/articles.html
@@ -3,6 +3,12 @@ title:  Voyagez avec nous !
 layout: sidebar
 slug:   articles
 ---
+    <header>
+      <div class="page-header">
+        <h1>{{ page.title }}</h1>
+        <p class="lead">Les articles</p>
+      </div>
+    </header>
       {% for post in site.posts %}
       <!-- articles
       ================================================== -->
