--- a/archives.html
+++ b/archives.html
@@ -18,7 +18,7 @@ slug:   archives
         <p>Le {{ post.date | date: "%d/%m/%Y" }}</p>
       </div>
       <div class="media-body">
-        <a href="{{ site.url }}{{ post.url }}">
+        <a href="{{ page.base_url }}{{ post.url }}">
           <h3 class="media-heading">{{ post.title }}</h3>
         </a>
         {{ post.excerpt }}
