--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Blog du voyage de Julie et Pierre-Yves &middot; JuEtPy</title>
-  <meta name="description" content="Blog du Voyage en amérique du sud">
-  <meta name="author" content="Yves ANDOLFATTO">
-  <meta name="viewport" content="width=device-width">
-  <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Blog du Voyage en amérique du sud">
+<meta name="author" content="Yves ANDOLFATTO">
+<meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
-  <link rel="author" href="humans.txt">
-  <link rel="stylesheet" href="http://link-webcreations.github.io/juetpy/assets/css/bootstrap.css">
-  <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://link-webcreations.github.io/juetpy/assets/css/lightbox.css">
-  <link rel="stylesheet" href="http://link-webcreations.github.io/juetpy/assets/css/main.css">
+<title>
+  
+    Blog du voyage de Julie et Pierre-Yves &middot; JuEtPy
+  
+</title>
 
-  <!--[if lt IE 9]>
-    <script src="http://link-webcreations.github.io/juetpy/assets/js/vendor/html5shiv.js"></script>
-    <script src="http://link-webcreations.github.io/juetpy/assets/js/vendor/respond.min.js"></script>
-  <![endif]-->
+<link rel="author" href="humans.txt">
+<link rel="stylesheet" href="/assets/css/bootstrap.css">
+<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="/assets/css/lightbox.css">
+<link rel="stylesheet" href="/assets/css/main.css">
 
-  <!-- Favicons -->
-  <link rel="shortcut icon" href="http://link-webcreations.github.io/juetpy/assets/ico/favicon.ico">
-</head>
+<!--[if lt IE 9]>
+  <script src="/assets/js/vendor/html5shiv.js"></script>
+  <script src="/assets/js/vendor/respond.min.js"></script>
+<![endif]-->
 
-<body>
-<div id="carousel-example" class="carousel slide">
+<!-- Favicons -->
+<link rel="shortcut icon" href="/assets/ico/favicon.ico">
+
+  </head>
+  <body>
+
+    <div id="carousel-example" class="carousel slide">
   <ol class="carousel-indicators">
     <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example" data-slide-to="1"></li>
@@ -36,7 +38,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-1.jpg" alt="">
+      <img src="/assets/img/moma-1.jpg" alt="">
       <div class="carousel-caption">
         <h1>Le voyage de Julie et Pierre-Yves</h1>
         <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
@@ -45,7 +47,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-2.jpg" alt="">
+      <img src="/assets/img/moma-2.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus loin</h1>
         <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -54,7 +56,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-3.jpg" alt="">
+      <img src="/assets/img/moma-3.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus haut ^^</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -75,25 +77,25 @@
 <div class="navbar" data-spy="affix" data-offset-top="600">
 
   <div class="container">
-    <a href="http://link-webcreations.github.io/juetpy/" class="navbar-brand">YOOOO</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
+    <a href="/" class="navbar-brand">YOOOO</a>
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a href="http://link-webcreations.github.io/juetpy/">Home</a>
+          <a href="/">Accueil</a>
         </li>
         <li>
-          <a href="http://link-webcreations.github.io/juetpy/articles/">Articles</a>
+          <a href="/preparatifs.html">Préparatifs</a>
         </li>
         <li>
-          <a href="http://link-webcreations.github.io/juetpy/about.html">A propos</a>
+          <a href="/articles/">Articles</a>
         </li>
         <li>
-          <a href="http://link-webcreations.github.io/juetpy/archives.html">Archives</a>
+          <a href="/galerie.html">Galerie</a>
         </li>
       </ul>
     </div>
@@ -107,7 +109,7 @@
     <h2>Premier Pays</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-1.jpg" alt="">
+      <img src="/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -118,7 +120,7 @@
     <h2>Le deuxieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-1.jpg" alt="">
+      <img src="/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -129,7 +131,7 @@
     <h2>Le troisieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-1.jpg" alt="">
+      <img src="/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -140,39 +142,31 @@
     <h2>le quatrieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="http://link-webcreations.github.io/juetpy/assets/img/moma-1.jpg" alt="">
+      <img src="/assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
 
-  
-<!-- Footer
-================================================== -->
-<footer class="footer">
-  <div class="container">
-    <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
-  </div>
-</footer>
 
+    <!-- Footer
+    ================================================== -->
+    <footer class="footer">
+      <div class="container">
+        <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
+      </div>
+    </footer>
 
-<!-- Javascript
+    <!-- Javascript
 ================================================== -->
-<script src="http://link-webcreations.github.io/juetpy/assets/js/vendor/jquery.js"></script>
-<script src="http://link-webcreations.github.io/juetpy/assets/js/vendor/bootstrap.js"></script>
-<script src="http://link-webcreations.github.io/juetpy/assets/js/vendor/lightbox.js"></script>
-<script src="http://link-webcreations.github.io/juetpy/assets/js/plugins.js"></script>
-<script src="http://link-webcreations.github.io/juetpy/assets/js/main.js"></script>
+<script src="/assets/js/vendor/jquery.js"></script>
+<script src="/assets/js/vendor/bootstrap.js"></script>
+<script src="/assets/js/vendor/lightbox.js"></script>
+<script src="/assets/js/plugins.js"></script>
+<script src="/assets/js/main.js"></script>
 
 <!-- Analytics
 ================================================== -->
-<script>
-  (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-  function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-  e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-  e.src='//www.google-analytics.com/analytics.js';
-  r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-  ga('create','UA-XXXXX-X');ga('send','pageview');
-</script>
 
-</body>
+
+  </body>
 </html>
