--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ slug:   home
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="{{ page.base_url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-1.jpg" alt="">
       <div class="carousel-caption">
         <h1>Le voyage de Julie et Pierre-Yves</h1>
         <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
@@ -21,7 +21,7 @@ slug:   home
       </div>
     </div>
     <div class="item">
-      <img src="{{ page.base_url }}/assets/img/moma-2.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-2.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus loin</h1>
         <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -30,7 +30,7 @@ slug:   home
       </div>
     </div>
     <div class="item">
-      <img src="{{ page.base_url }}/assets/img/moma-3.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-3.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus haut ^^</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -55,7 +55,7 @@ slug:   home
     <h2>Premier Pays</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="{{ page.base_url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -66,7 +66,7 @@ slug:   home
     <h2>Le deuxieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="{{ page.base_url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -77,7 +77,7 @@ slug:   home
     <h2>Le troisieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="{{ page.base_url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -88,7 +88,7 @@ slug:   home
     <h2>le quatrieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="{{ page.base_url }}/assets/img/moma-1.jpg" alt="">
+      <img src="{{ page.base_url }}assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
