--- a/archives.html
+++ b/archives.html
@@ -2,6 +2,7 @@
 title:  Archive des articles
 layout: default
 slug:   archives
+base_url: "../"
 ---
 <!-- articles
 ================================================== -->
