--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 title:  Blog du voyage de Julie et Pierre-Yves
 layout: home
 slug:   home
+base_url: "./"
+
 ---
 
 <div id="carousel-example" class="carousel slide">
