--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 </title>
 
 <link rel="author" href="humans.txt">
-<link rel="stylesheet" href="assets/css/bootstrap.css">
+<link rel="stylesheet" href="./assets/css/bootstrap.css">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="assets/css/lightbox.css">
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="./assets/css/lightbox.css">
+<link rel="stylesheet" href="./assets/css/main.css">
 
 <!--[if lt IE 9]>
-  <script src="assets/js/vendor/html5shiv.js"></script>
-  <script src="assets/js/vendor/respond.min.js"></script>
+  <script src="./assets/js/vendor/html5shiv.js"></script>
+  <script src="./assets/js/vendor/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="assets/ico/favicon.ico">
+<link rel="shortcut icon" href="./assets/ico/favicon.ico">
 
   </head>
   <body>
@@ -38,7 +38,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="assets/img/moma-1.jpg" alt="">
+      <img src="./assets/img/moma-1.jpg" alt="">
       <div class="carousel-caption">
         <h1>Le voyage de Julie et Pierre-Yves</h1>
         <p class="lead">Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="assets/img/moma-2.jpg" alt="">
+      <img src="./assets/img/moma-2.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus loin</h1>
         <p class="lead">Maecenas sed diam eget risus varius blandit sit amet non magna. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="assets/img/moma-3.jpg" alt="">
+      <img src="./assets/img/moma-3.jpg" alt="">
       <div class="carousel-caption">
         <h1>Toujours plus haut ^^</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
@@ -82,20 +82,20 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="" class="navbar-brand">YOOOO</a>
+    <a href="./" class="navbar-brand">YOOOO</a>
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li class="active">
-          <a href="">Accueil</a>
+          <a href="./">Accueil</a>
         </li>
         <li>
-          <a href="preparatifs">Préparatifs</a>
+          <a href="./preparatifs">Préparatifs</a>
         </li>
         <li>
-          <a href="articles/">Articles</a>
+          <a href="./articles/">Articles</a>
         </li>
         <li>
-          <a href="galerie">Galerie</a>
+          <a href="./galerie">Galerie</a>
         </li>
       </ul>
     </div>
@@ -109,7 +109,7 @@
     <h2>Premier Pays</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="assets/img/moma-1.jpg" alt="">
+      <img src="./assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -120,7 +120,7 @@
     <h2>Le deuxieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="assets/img/moma-1.jpg" alt="">
+      <img src="./assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -131,7 +131,7 @@
     <h2>Le troisieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="assets/img/moma-1.jpg" alt="">
+      <img src="./assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -142,7 +142,7 @@
     <h2>le quatrieme</h2>
     <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
     <a href="#" class="thumbnail">
-      <img src="assets/img/moma-1.jpg" alt="">
+      <img src="./assets/img/moma-1.jpg" alt="">
     </a>
   </div>
 </div>
@@ -158,11 +158,11 @@
 
     <!-- Javascript
 ================================================== -->
-<script src="assets/js/vendor/jquery.js"></script>
-<script src="assets/js/vendor/bootstrap.js"></script>
-<script src="assets/js/vendor/lightbox.js"></script>
-<script src="assets/js/plugins.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="./assets/js/vendor/jquery.js"></script>
+<script src="./assets/js/vendor/bootstrap.js"></script>
+<script src="./assets/js/vendor/lightbox.js"></script>
+<script src="./assets/js/plugins.js"></script>
+<script src="./assets/js/main.js"></script>
 
 <!-- Analytics
 ================================================== -->
