--- a/preparatifs.html
+++ b/preparatifs.html
@@ -14,18 +14,18 @@
 </title>
 
 <link rel="author" href="humans.txt">
-<link rel="stylesheet" href="assets/css/bootstrap.css">
+<link rel="stylesheet" href="../assets/css/bootstrap.css">
 <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="assets/css/lightbox.css">
-<link rel="stylesheet" href="assets/css/main.css">
+<link rel="stylesheet" href="../assets/css/lightbox.css">
+<link rel="stylesheet" href="../assets/css/main.css">
 
 <!--[if lt IE 9]>
-  <script src="assets/js/vendor/html5shiv.js"></script>
-  <script src="assets/js/vendor/respond.min.js"></script>
+  <script src="../assets/js/vendor/html5shiv.js"></script>
+  <script src="../assets/js/vendor/respond.min.js"></script>
 <![endif]-->
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="assets/ico/favicon.ico">
+<link rel="shortcut icon" href="../assets/ico/favicon.ico">
 
   </head>
   <body>
@@ -41,20 +41,20 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a href="" class="navbar-brand">YOOOO</a>
+    <a href="../" class="navbar-brand">YOOOO</a>
     <div class="nav-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="">Accueil</a>
+          <a href="../">Accueil</a>
         </li>
         <li class="active">
-          <a href="preparatifs">Préparatifs</a>
+          <a href="../preparatifs">Préparatifs</a>
         </li>
         <li>
-          <a href="articles/">Articles</a>
+          <a href="../articles/">Articles</a>
         </li>
         <li>
-          <a href="galerie">Galerie</a>
+          <a href="../galerie">Galerie</a>
         </li>
       </ul>
     </div>
@@ -97,11 +97,11 @@
 
     <!-- Javascript
 ================================================== -->
-<script src="assets/js/vendor/jquery.js"></script>
-<script src="assets/js/vendor/bootstrap.js"></script>
-<script src="assets/js/vendor/lightbox.js"></script>
-<script src="assets/js/plugins.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="../assets/js/vendor/jquery.js"></script>
+<script src="../assets/js/vendor/bootstrap.js"></script>
+<script src="../assets/js/vendor/lightbox.js"></script>
+<script src="../assets/js/plugins.js"></script>
+<script src="../assets/js/main.js"></script>
 
 <!-- Analytics
 ================================================== -->
