--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
           <a href="./">Accueil</a>
         </li>
         <li>
-          <a href="./preparatifs">Préparatifs</a>
+          <a href="./">Préparatifs</a>
         </li>
         <li>
-          <a href="./articles/">Articles</a>
+          <a href="./">Articles</a>
         </li>
         <li>
-          <a href="./galerie">Galerie</a>
+          <a href="./">Galerie</a>
         </li>
       </ul>
     </div>
@@ -105,7 +105,7 @@
 
 <div class="featurette">
   <div class="container">
-    <h1 class="step-num">Coming soon !</h1>
+    <h1></h1>Coming soon !</h1>
   </div>
 </div>
 
