--- a/index.html
+++ b/index.html
@@ -103,11 +103,9 @@
 </div>
 
 
-<div class="featurette">
   <div class="container">
-    <h1></h1>Coming soon !</h1>
+    <h1 class="pull-center">Coming soon !</h1>
   </div>
-</div>
 
     <!-- Footer
     ================================================== -->
