--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,7 @@
 ---
-title:  Preparatifs
+title:  Présentation
 layout: sidebar
-slug:   preparatifs
+slug:   presentation
 base_url: "../"
 ---
 It's up to you juju
