--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Blog du Voyage en amérique du sud">
+<meta name="description" content="Blog du voyage en amérique du sud">
 <meta name="author" content="Yves ANDOLFATTO">
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
@@ -89,13 +89,13 @@
           <a href="./">Accueil</a>
         </li>
         <li>
-          <a href="./">Préparatifs</a>
+          <a href="./presentation">Présentation</a>
         </li>
         <li>
-          <a href="./">Articles</a>
+          <a href="./articles/">Articles</a>
         </li>
         <li>
-          <a href="./">Galerie</a>
+          <a href="./galerie">Galerie</a>
         </li>
       </ul>
     </div>
@@ -103,11 +103,58 @@
 </div>
 
 
+<div class="featurette">
   <div class="container">
-    <h1 class="pull-center">Coming soon !</h1>
+    <h1 class="step-num">1</h1>
+    <h2>Premier Pays</h2>
+    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
+    <a href="#" class="thumbnail">
+      <img src="./assets/img/moma-1.jpg" alt="">
+    </a>
   </div>
+</div>
+
+<div class="featurette">
+  <div class="container">
+    <h1 class="step-num">2</h1>
+    <h2>Le deuxieme</h2>
+    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
+    <a href="#" class="thumbnail">
+      <img src="./assets/img/moma-1.jpg" alt="">
+    </a>
+  </div>
+</div>
+
+<div class="featurette">
+  <div class="container">
+    <h1 class="step-num">3</h1>
+    <h2>Le troisieme</h2>
+    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
+    <a href="#" class="thumbnail">
+      <img src="./assets/img/moma-1.jpg" alt="">
+    </a>
+  </div>
+</div>
+
+<div class="featurette">
+  <div class="container">
+    <h1 class="step-num">4</h1>
+    <h2>le quatrieme</h2>
+    <p class="lead">Erat autem diritatis eius hoc quoque indicium nec obscurum nec latens, quod ludicris cruentis delectabatur et in circo sex vel septem aliquotiens vetitis certaminibus pugilum vicissim se concidentium perfusorumque sanguine specie ut lucratus ingentia laetabatur.</p>
+    <a href="#" class="thumbnail">
+      <img src="./assets/img/moma-1.jpg" alt="">
+    </a>
+  </div>
+</div>
 
 
+    <!-- Footer
+    ================================================== -->
+    <footer class="footer">
+      <div class="container">
+        <p>Made with love by <a href="http://link-webcreations.fr">Yves</a>.</p>
+      </div>
+    </footer>
 
     <!-- Javascript
 ================================================== -->
