--- a/archives.html
+++ b/archives.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Blog du Voyage en amérique du sud">
+<meta name="description" content="Blog du voyage en amérique du sud">
 <meta name="author" content="Yves ANDOLFATTO">
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
@@ -48,7 +48,7 @@
           <a href="../">Accueil</a>
         </li>
         <li>
-          <a href="../preparatifs">Préparatifs</a>
+          <a href="../presentation">Présentation</a>
         </li>
         <li>
           <a href="../articles/">Articles</a>
