--- a/presentation.html
+++ b/presentation.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Blog du Voyage en amérique du sud">
+<meta name="description" content="Blog du voyage en amérique du sud">
 <meta name="author" content="Yves ANDOLFATTO">
 <meta name="robots" content="noindex, nofollow"><!-- A modifier en Prod -->
 
 <title>
   
-    Preparatifs &middot; JuEtPy
+    Présentation &middot; JuEtPy
   
 </title>
 
@@ -48,7 +48,7 @@
           <a href="../">Accueil</a>
         </li>
         <li class="active">
-          <a href="../preparatifs">Préparatifs</a>
+          <a href="../presentation">Présentation</a>
         </li>
         <li>
           <a href="../articles/">Articles</a>
@@ -67,12 +67,6 @@
   <div class="col-lg-3">
     <div class="sidebar">
       <ul class="nav">
-        
-          <li><a href="#nous">Nous</a></li>
-<li><a href="#itineraire">L'itinéraire</a></li>
-<li><a href="#sacs">Nos sacs à dos</a></li>
-<li><a href="#budget">Budget</a></li>
-
         
       </ul>
     </div>
