--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
 <div class="navbar" data-spy="affix" data-offset-top="600">
 
   <div class="container">
-    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".nav-collapse">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a href="./" class="navbar-brand">YOOOO</a>
-    <div class="nav-collapse collapse">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="./" class="navbar-brand">Accueil</a>
+    </div>  
+    <nav class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active">
-          <a href="./">Accueil</a>
-        </li>
         <li>
           <a href="./presentation">Présentation</a>
         </li>
@@ -98,7 +98,7 @@
           <a href="./galerie">Galerie</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </div>
 </div>
 
